# cinemacpp

html_page/: app.js  index.html  style.css
source/: CMakeLists.txt  CinemaServer.cpp  CinemaServer.h  ConfigHolder.cpp  ConfigHolder.h  DeviceLedRGB.cpp  DeviceLedRGB.h  DeviceRF.cpp  DeviceRF.h  DeviceScreen.cpp  DeviceScreen.h  HttpServer.cpp  HttpServer.h  Logger.h  SerialDeviceBase.cpp  SerialDeviceBase.h  SerialDevicesManager.cpp  SerialDevicesManager.h  SerialPortController.cpp  SerialPortController.h  main.cpp
